--- a/formulario.css
+++ b/formulario.css
@@ -110,13 +110,6 @@ form input[type="submit"]:hover {
     background-color: #0071d0;
 }
 
-.forms {
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 20px;
-}
 
 .site {
     text-decoration: none;
@@ -127,4 +120,19 @@ form input[type="submit"]:hover {
     border: 1px solid #0091ff;
     display: inline-block;
     border-radius: 5px;
+}
+
+@media (min-width: 360px) {
+    .forms {
+        padding: 20px;
+        text-align: center;
+        left: 50%;
+        bottom: 20px;
+    }
+
+    form {
+        margin: 0 auto;
+        box-sizing: border-box; 
+
+    }
 }
