--- a/catalogo/catalago.css
+++ b/catalogo/catalago.css
@@ -31,14 +31,20 @@
 
         .site {
             text-decoration: none;
-            color: white;
-            margin-right: 20px;
+            color: #000000;
             transition: color 0.3s;
+            margin: 5px;
+            padding: 10px;
+            border: 1px solid #ffffff;
+            border-color: #ccc;
+            background-color: #f0f0f0;
+            display: inline-block;
+            border-radius: 5px;
         }
-
+        
         .site:hover {
-            color: #ff4400;
-            background-color: #0091ff;
+            color: #ffffff;
+            background-color: #001F4D;
         }
 
         /* Estilos para a seção de boas-vindas */
