--- a/inicio/inicio.css
+++ b/inicio/inicio.css
@@ -44,14 +44,20 @@ header {
 
 .site {
     text-decoration: none;
-    color: white;
-    margin-right: 20px;
+    color: #000000;
     transition: color 0.3s;
+    margin: 5px;
+    padding: 10px;
+    border: 1px solid #ffffff;
+    border-color: #ccc;
+    background-color: #f0f0f0;
+    display: inline-block;
+    border-radius: 5px;
 }
 
 .site:hover {
-    color: #ff4400;
-    background-color: #0091ff;
+    color: #ffffff;
+    background-color: #001F4D;
 }
 
 /* Estilos para a seção de boas-vindas */
@@ -91,7 +97,8 @@ header {
 
 .property {
     flex-basis: 48%;
-    /* Utilize flex-basis para uma largura flexível */
+    margin-left: auto;
+    margin-right: auto;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
