--- a/catalogo/catalago.css
+++ b/catalogo/catalago.css
@@ -1,4 +1,3 @@
-        /* Estilos gerais para o corpo da página */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -6,7 +5,6 @@
             text-align: center;
         }
 
-        /* Estilos para o cabeçalho */
         header {
             background-color: #0091ff;
             color: white;
@@ -47,7 +45,6 @@
             background-color: #001F4D;
         }
 
-        /* Estilos para a seção de boas-vindas */
         .bem_vindo {
             background-color: #f0f0f0;
             padding: 20px;
@@ -63,7 +60,6 @@
             font-size: 20px;
         }
 
-        /* Animação de Fade In */
         @keyframes fadeIn {
             from {
                 opacity: 0;
@@ -74,7 +70,6 @@
             }
         }
 
-        /* Estilos para o catálogo de imóveis */
         .catalog {
             display: flex;
             justify-content: space-around;
@@ -116,11 +111,10 @@
         }
         
         .property img:hover {
-            transform: scale(1.1); /* Aumenta a imagem em 10% quando o mouse passa sobre ela */
+            transform: scale(1.1); 
         }
         
 
-        /* Animação de Slide In */
         @keyframes slideIn {
             from {
                 transform: translateY(100%);
@@ -131,7 +125,6 @@
             }
         }
 
-        /* Estilos para o rodapé */
         footer {
             background-color: #0091ff;
             color: white;
@@ -142,7 +135,6 @@
             margin: 0;
         }
 
-        /* Animação de Rotação */
         .rotate {
             animation: rotate 2s linear infinite;
         }
