--- a/inicio/inicio.css
+++ b/inicio/inicio.css
@@ -1,4 +1,3 @@
-/* Reset de estilos padrão para o corpo da página */
 html,
 body,
 h1,
@@ -11,7 +10,6 @@ li {
     padding: 0;
 }
 
-/* Estilos gerais para o corpo da página */
 body {
     font-family: Arial, sans-serif;
     text-align: center;
@@ -19,7 +17,6 @@ body {
     padding: 0;
 }
 
-/* Estilos para o cabeçalho */
 header {
     background-color: #0091ff;
     color: white;
@@ -60,7 +57,6 @@ header {
     background-color: #001F4D;
 }
 
-/* Estilos para a seção de boas-vindas */
 .bem_vindo {
     background-color: #f0f0f0;
     padding: 20px;
@@ -76,7 +72,6 @@ header {
     font-size: 20px;
 }
 
-/* Animação de Fade In */
 @keyframes fadeIn {
     from {
         opacity: 0;
@@ -87,7 +82,6 @@ header {
     }
 }
 
-/* Estilos para o catálogo de imóveis */
 .catalog {
     display: flex;
     flex-wrap: wrap;
@@ -97,8 +91,6 @@ header {
 
 .property {
     flex-basis: 48%;
-    margin-left: auto;
-    margin-right: auto;
     background-color: white;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -123,7 +115,6 @@ header {
     margin: 5px 0;
 }
 
-/* Animação de Slide In */
 @keyframes slideIn {
     from {
         transform: translateY(100%);
@@ -134,7 +125,6 @@ header {
     }
 }
 
-/* Estilos para o rodapé */
 footer {
     background-color: #0091ff;
     color: white;
@@ -145,7 +135,6 @@ footer p {
     margin: 0;
 }
 
-/* Estilos para a classe .sobre-pro */
 .sobre-pro {
     background-color: #fff;
     padding: 20px;
@@ -156,7 +145,6 @@ footer p {
     color: #333;
 }
 
-/* Estilos para a classe .lista */
 .lista {
     list-style-type: disc;
     margin-left: 20px;
@@ -164,7 +152,6 @@ footer p {
     color: #555;
 }
 
-/* Estilos para a classe .li */
 .li {
     padding: 8px 0;
     font-size: 16px;
@@ -178,4 +165,11 @@ footer p {
 .li:hover {
     background-color: #f0f0f0;
     color: #0091ff;
+}
+
+@media (min-width: 360px) {
+    .property {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
