--- a/editar/editar.css
+++ b/editar/editar.css
@@ -10,22 +10,25 @@ li {
     padding: 0;
 }
 
+.forms {
+    border-style: solid;
+    width: 20%;
+    margin-left: 40%;
+    margin-top: 5%;
+    border-radius: 7%;
+}
+
 body {
     font-family: Arial, sans-serif;
     text-align: center;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
-    color: #333;
-    overflow-y: hidden;
-    background-image: url(https://images.alphacoders.com/435/435117.jpg);
 }
 
 header {
     background-color: #0091ff;
     color: white;
-    padding: 20px 0;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    padding: 10px 0;
 }
 
 .container {
@@ -63,21 +66,86 @@ header {
 }
 
 .bem_vindo {
-    background-color: transparent;
-    padding: 40px 20px;
+    background-color: #f0f0f0;
+    padding: 20px;
     animation: fadeIn 1s ease-in-out forwards;
 }
 
 .bem_vindo h2 {
-    font-size: 32px;
-    margin-bottom: 10px;
-    color: #000000;
-    justify-self: center;
+    font-size: 24px;
+    margin: 0;
+}
+
+.bem_vindo h3 {
+    font-size: 20px;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.catalog {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.property {
+    flex-basis: 48%;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 10px;
+    margin-bottom: 20px;
+    animation: slideIn 1s ease-in-out forwards;
+}
+
+.property img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.property h4 {
+    font-size: 18px;
+    margin: 10px 0;
+}
+
+.property p {
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+@keyframes slideIn {
+    from {
+        transform: translateY(100%);
+    }
+
+    to {
+        transform: translateY(0);
+    }
+}
+
+footer {
+    background-color: #0091ff;
+    color: white;
+    padding: 10px 0;
+}
+
+footer p {
+    margin: 0;
 }
 
 .sobre-pro {
-    background-color: white;
-    padding: 40px 20px;
+    background-color: #fff;
+    padding: 20px;
     margin-top: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -107,32 +175,9 @@ header {
     color: #0091ff;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@media (max-width: 768px) {
-    .container {
-        flex-direction: column;
-        text-align: center;
-    }
-
-    #nav {
-        margin-top: 10px;
-    }
-
-    .site {
-        margin: 5px 0;
-    }
-
-    .bem_vindo,
-    .sobre-pro {
-        padding: 20px;
+@media (min-width: 360px) {
+    .property {
+        margin-left: auto;
+        margin-right: auto;
     }
 }
